@@ -1,5 +1,7 @@
 2018-01-27  Karl Berry  <karl@freefriends.org>
 
+	* str-list.c (str_list_concat_elements): reformat for consistency.
+
 	* str-list.h (STR_LIST_EMPTY, STR_LIST_FIRST_ELT): new macros.
 	* kpsewhich.c,
 	* pathsearch.c,
